...
import close from './resources/close';

import { LogBox } from 'react-native';
LogBox.ignoreAllLogs();

// Mock data
const users = [...new Array(2500)].map((_, index) => ({
  id: `${index}`,
  label: faker(),
  type: 'users',
}));
const channels = [...new Array(2500)].map((_, index) => ({
  id: `${index}`,
...
